Working on properly displaying the calendar# Please enter the commit message for your changes. Lines starting

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -26,7 +26,7 @@
             <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
             <!-- Custom site styles -->
-            <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}"/>
+            <!-- <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}"/> -->
         {% endblock %}
 
         <!-- Block to contain all JS files, which can be overwritten/extended in child templates -->
