Calendar working! fixed missing css file

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -24,9 +24,11 @@
 
             <!-- Montserrat font family -->
             <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
 
             <!-- Custom site styles -->
-            <!-- <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}"/> -->
+            <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}"/>
         {% endblock %}
 
         <!-- Block to contain all JS files, which can be overwritten/extended in child templates -->
