--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -16,6 +16,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'documentation' %}">Documentation</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'customquery' %}">Custom Query</a>
+          </li>
         </ul>
 
         <div class="ml-auto">
