make links accessibility-compliant

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -26,7 +26,7 @@
         <h4 id="list-about-project">About the Project</h4>
         <p>
             Our task was to build an interface that interacts with and displays the geothermal data for the broader Carleton community.
-            To learn more about the background of the project, visit <u><a href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php">this page</a></u> on the computer science department website.
+            To learn more about the background of the project, visit the <u><a href="https://www.cs.carleton.edu/cs_comps/2223/geo/index.php">Carleton computer science comps page</a></u>.
         </p>
         <h4 id="about-geothermal">About the Geothermal Wells</h4>
         <p>
@@ -46,7 +46,7 @@
             The overview of the data pipeline for the geothermal system is as follows: the 5 fiber optic cables embedded in the Bald Spot boreholes converge at a switchbox in a utility tunnel north of the Chapel, which is connected to a Silixa XT-DTS unit in a network closet in the Chapel basement.
             The XT-DTS is a ruggedized distributed temperature sensor unit, and collects data from the boreholes by sending laser pulses down the fiber optic loops.
             It sends the data files it generates to a private PC via ethernet network, and these data files are uploaded to a Linux Virtual Machine that captures the relevant data and stores the database. Every 30 minutes, a script is invoked to upload new measurements to the database.
-            For more information about the data pipeline or database, please contact <a href="mailto:bduffy@carleton.edu">Bruce Duffy</a>.
+            For more information about the data pipeline or database, please <u><a href="mailto:bduffy@carleton.edu">contact Bruce Duffy</a></u>.
 
             The most recent outage from September 2022-January 2023 resulted from a hardware failure of the XT-DTS unit.
             For several months, there was no DTS unit taking measurements. Now that the previous unit has been replaced, data collection has resumed.
