got raw query working (just doesn't display yet)

--- a/geothermalsite/dashboard/templates/dashboard/customquery.html
+++ b/geothermalsite/dashboard/templates/dashboard/customquery.html
@@ -14,7 +14,7 @@
     <p> INSERT SCHEMA FOR THE DB</p>
     <label for="query">Enter A Custom Query:</label>
     <br>
-    <textarea name="query" style="height: 10em; width: 80ch;"></textarea>
+    <textarea name="rawQuery" style="height: 10em; width: 80ch;"></textarea>
     <br>
     <button type="submit">Submit</button>
     </form>
